--- a/landing-page/vercel.json
+++ b/landing-page/vercel.json
@@ -1,1 +1,32 @@
-{}
+{
+"headers": [
+    {
+      "source": "/.well-known/clerk/clerk.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/navigator",
+      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app"
+    },
+    {
+      "source": "/navigator/:path*",
+      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app/:path*"
+    },
+    {
+      "source": "/zusammenhaenge",
+      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app"
+    },
+    {
+      "source": "/zusammenhaenge/:path*",
+      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app/:path*"
+    }
+  ]
+}
+
