--- a/landing-page/vercel.json
+++ b/landing-page/vercel.json
@@ -12,20 +12,20 @@
   ],
   "rewrites": [
     {
-      "source": "/navigator/:path*",
-      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app/:path*"
-    },
-    {
       "source": "/navigator",
-      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app"
+      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app/navigator/"
     },
     {
-      "source": "/zusammenhaenge/:path*",
-      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app/:path*"
+      "source": "/navigator/:path*",
+      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app/navigator/:path*"
     },
     {
       "source": "/zusammenhaenge",
-      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app"
+      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app/zusammenhaenge/"
+    },
+    {
+      "source": "/zusammenhaenge/:path*",
+      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app/zusammenhaenge/:path*"
     }
   ]
 }
