--- a/landing-page/vercel.json
+++ b/landing-page/vercel.json
@@ -13,19 +13,19 @@
   "rewrites": [
     {
       "source": "/navigator",
-      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app/navigator/"
+      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app"
     },
     {
       "source": "/navigator/:path*",
-      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app/navigator/:path*"
+      "destination": "https://hermes-navigator-904dsfnp9-swissfmprofessionals-projects.vercel.app/:path*"
     },
     {
       "source": "/zusammenhaenge",
-      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app/zusammenhaenge/"
+      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app"
     },
     {
       "source": "/zusammenhaenge/:path*",
-      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app/zusammenhaenge/:path*"
+      "destination": "https://hermes-zusammenhaenge-9t1ls9tkz-swissfmprofessionals-projects.vercel.app/:path*"
     }
   ]
 }
